# ccnotify

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  spec.md
.github/workflows/: release.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: architecture.md  development.md  troubleshooting.md
hooks/: notify-forward.sh
overlay/: Cargo.toml  tauri.conf.json
overlay/capabilities/: default.json
overlay/src/: http.rs  main.rs
overlay/ui/: index.html
scripts/: install-local.sh  smoke-test.sh
wrapper/: Cargo.toml
wrapper/src/: host.rs  main.rs  permissions.rs  server.rs  session.rs  setup.rs  term.rs
