[package]
name = "ccnotify-overlay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ccnotify-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ccnotify-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = ["macos-private-api"] }
