[package]
name = "ccnotify"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ccnotify"
path = "src/main.rs"

[dependencies]
ccnotify-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = "0.8"
tiny_http = "0.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"
